# mephmetrbot

./: .env.example  .gitignore  README.md  app.py  asdf.db  asdf.db-journal  asdsadsad.db  config.py  data.db  env.example  main.py  pyproject.toml
database/: mefmetrbot.db
handlers/: admin.py  casino.py  clan.py  mephmetrbot.db  user.py
mephmetrbot/: __init__.py  app.py  config.py
mephmetrbot/handlers/: __init__.py  admin.py  casino.py  clan.py  cryptopay.py  error.py  models.py  user.py  webapp.py
mephmetrbot/routes/: screamer.py
mephmetrbot/routes/templates/: index.html  style.css
mephmetrbot/utils/: states.py
utils/: states.py
