[tool.poetry]
name = "mephmetrbot"
version = "0.2.1"
description = ""
authors = ["Maxim <clownl3ss@icloud.com>", "Denis <135858911+imm4d3@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/erruqie/mephmetrbot"

[tool.poetry.urls]
"Telegram Channel" = "https://t.me/mefmetrch"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
python-dotenv = "^1.0.1"
tortoise-orm = "^0.21.5"

[tool.poetry.scripts]
poetry = 'poetry.console:run'
app = 'mephmetrbot.app:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
